[package]
name = "invoke_impl"
version = "0.1.0"
edition = "2021"
description = "Proc macro to generate functions that can invoke all identical functions or methods inside impl blocks."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.96", features=["full", "extra-traits"]}
quote = "1.0.18"